manifests/deploy.frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    aadpodidbinding: dapr-checkin-cluster-mid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        aadpodidbinding: dapr-checkin-cluster-mid
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "frontend"
        dapr.io/port: "8000"
        dapr.io/log-level: "debug"
        dapr.io/config: "tracing"
        dapr.io/profiling: "true"
    spec:
      containers:
        - name: frontend
          image: acrxrgol23o5l5pw.azurecr.io/frontend:dev-0.1.0
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
